# MSD

Aug 20/Aug 20/: main.cpp
Aug 20/Aug 20.xcodeproj/: project.pbxproj
Aug 20/Average/Average.xcodeproj/: project.pbxproj
Aug 20/GiveChange/GiveChange/: main.cpp
Aug 20/GiveChange/GiveChange.xcodeproj/: project.pbxproj
Aug21/ForLoopPractise/ForLoopPractise.xcodeproj/: project.pbxproj
Aug21/IfStatementPractise/IfStatementPractise/: main.cpp
Aug21/IfStatementPractise/IfStatementPractise.xcodeproj/: project.pbxproj
Aug22/DateFormats/DateFormats/: main.cpp
Aug22/DateFormats/DateFormats.xcodeproj/: project.pbxproj
Aug22/MagicDates/MagicDates/: main.cpp
Aug22/Palindromes/Palindromes/: main.cpp
Aug22/RomanNumerals/RomanNumerals/: main.cpp
Aug22/RomanNumerals/RomanNumerals.xcodeproj/: project.pbxproj
Aug23/FunctionPractice/FunctionPractice/: main.cpp
Aug23/FunctionPractice/FunctionPractice.xcodeproj/: project.pbxproj
Aug23/StringAnalyzer/StringAnalyzer/: LetterHelpers.cpp  LetterHelpers.hpp  WordHelpers.cpp  main.cpp
Aug23/StringAnalyzer/StringAnalyzer.xcodeproj/: project.pbxproj
Aug26/VectorHW/VectorHW.xcodeproj/: project.pbxproj
Aug26/VectorPractice/VectorPractice/: HelperFunctions.cpp  HelperFunctions.hpp
Aug26/VectorPractice/VectorPractice.xcodeproj/: project.pbxproj
Aug27/Cards/Cards/: CardHelpers.cpp
Aug27/PoliStructs/PoliStructs/: main.cpp
Aug27/PoliStructs/PoliStructs.xcodeproj/: project.pbxproj
Day1/Aug 19/: main.cpp
Day11/: BinaryAndHex.text
Day20/SFML_lab/: CMakeLists.txt
Day20/SFML_lab/src/: main.cpp
(+232 files in other folders)
